chore: Update license references to Apache 2.0 in csproj and READMEs

--- a/Automaton/Automaton.csproj
+++ b/Automaton/Automaton.csproj
@@ -14,7 +14,7 @@
     <Description>Write once, run everywhere. A unified Mealy machine kernel for MVU, Event Sourcing, and the Actor Model. Define pure domain logic as a transition function — then run it in a browser, an event store, or a mailbox without changing a line.</Description>
     <Authors>Maurice Peters</Authors>
     <PackageTags>automaton;mealy-machine;mvu;event-sourcing;actor-model;ddd;functional;cqrs;state-machine</PackageTags>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/MCGPPeters/Automaton</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
