--- a/Automaton/Automaton.csproj
+++ b/Automaton/Automaton.csproj
@@ -11,9 +11,9 @@
   <PropertyGroup>
     <PackageId>Automaton</PackageId>
     <Title>Automaton</Title>
-    <Description>Write once, run everywhere. A unified Mealy machine kernel for MVU, Event Sourcing, and the Actor Model. Define pure domain logic as a transition function — then run it in a browser, an event store, or a mailbox without changing a line.</Description>
+    <Description>Write once, run everywhere. A unified Mealy machine kernel for MVU, Event Sourcing, and the Actor Model. Define pure domain logic as a transition function — then run it in a browser, an event store, or a mailbox without changing a line. Includes the Decider pattern for command validation.</Description>
     <Authors>Maurice Peters</Authors>
-    <PackageTags>automaton;mealy-machine;mvu;event-sourcing;actor-model;ddd;functional;cqrs;state-machine</PackageTags>
+    <PackageTags>automaton;mealy-machine;mvu;event-sourcing;actor-model;ddd;functional;cqrs;state-machine;decider;command-validation;result-type</PackageTags>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/MCGPPeters/Automaton</RepositoryUrl>
