ci: Address Copilot review comments on PR validation and versioning
- Use PR SHAs for changed-file detection instead of origin/base_ref
  to avoid including unrelated commits when main advances (pr-validation.yml)
- Skip summary job for Dependabot PRs to prevent silent skip when
  dependent jobs (title/description validation) are skipped (pr-validation.yml)
- Add Nerdbank.GitVersioning MSBuild package to Directory.Build.props
  so local builds are versioned consistently, not just CI (Directory.Build.props)
- Remove /p:PackageVersion override from cd.yml since NBGV MSBuild
  integration handles version stamping automatically

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,7 +25,10 @@ jobs:
 
       - name: Set version
         id: version
-        run: echo "VERSION=$(nbgv get-version -v NuGetPackageVersion)" >> $GITHUB_OUTPUT
+        run: |
+          VERSION=$(nbgv get-version -v NuGetPackageVersion)
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+          echo "📦 Package version: $VERSION"
 
       - name: Restore dependencies
         run: dotnet restore
@@ -50,7 +53,7 @@ jobs:
 
       - name: Pack
         if: github.event_name != 'pull_request'
-        run: dotnet pack ./Automaton/Automaton.csproj --configuration Release --output ./nupkg /p:PackageVersion=${{ steps.version.outputs.VERSION }}
+        run: dotnet pack ./Automaton/Automaton.csproj --configuration Release --output ./nupkg
 
       - name: Publish to NuGet
         if: github.event_name != 'pull_request'
